# helloworld-eval

./: .env.example  .funcignore  .gitignore  CLAUDE.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  function_app.py  host.json  local.settings.json  main.py  oryx-manifest.toml  pyproject.toml  query_model.py  query_rewriter.py  requirements.txt  test_question_endpoint.py  test_stream.md  translate_model.py  utils.py
.cph/: .function_app.py_9e9b1c2882a3aa81536adbf10f61c06c.prob
.github/workflows/: develop_helloworld-func-app-v2.yml  helloworld-container-app-v1-AutoDeployTrigger-132aca74-9a0a-49c2-9a9b-4a0f02e2c654.yml  helloworld-container-app-v1-AutoDeployTrigger-7005161a-819c-4844-be9d-8ebeb2d69479.yml  workflow.yml
configs/: chatbot_adapter.yaml  config.json  v1.yaml
data/conversations/: 20260429T075026Z-99940f_foreign_worker_01_vn_wage.jsonl  20260429T075528Z-3bdfb1_foreign_worker_01_vn_wage.jsonl  20260429T075611Z-598827_foreign_worker_01_vn_wage.jsonl  20260429T080344Z-37fb65_foreign_worker_01_vn_wage.jsonl  20260429T130328Z-01ab66_foreign_worker_01_vn_wage.jsonl  20260429T130328Z-13915e_foreign_worker_01_vn_wage.jsonl  20260429T130328Z-20b73a_foreign_worker_01_vn_wage.jsonl  (+10 more)
docs/: README.md  development.md  experiments.md
evaluation/: cli.py  runner.py
legacy/: question.py
prompts/: prompts.py
test_data/: question.json  test_data_chat_ask.json  test_data_cv.json  test_data_cv_generation.json  test_data_echo.json  test_data_question.json  test_data_recent_room.json  test_data_room_log.json  test_data_summary.json
tests/: conftest.py  test_adapter.py  test_cli.py  test_e2e.py  test_evaluator.py  test_llm.py  test_manifest.py  test_orchestrator.py  test_persona_chat.py  test_persona_generator.py  test_persona_schema.py  test_prompts.py  test_retry.py
(+97 files in other folders)
